# pcbjam

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DEBUG.md  README.md  build.md
.claude/: settings.json
.github/workflows/: ci-ubicloud.yml  ci.yml  deploy-demo.yml  publish-libs.yml  release.yml  screenshot-changelog.yml  wasm-build.yml  wasm-opt-arm-repro.yml  wasm-opt-bench.yml  wasm-opt-validate.yml
cmake/: FindCURL.cmake  FindOCC.cmake  Findlibgit2.cmake  Findngspice.cmake  KicadWasmOptions.cmake
core/: CMakeLists.txt
core/wasm-config/: config.h
docker/: Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  shell.sh
docs/: 03-PHASE3-WXWIDGETS-WASM.md  04-COMPREHENSIVE-WASM-TEST.md  05-WXGLCANVAS-WASM-IMPLEMENTATION.md  06-WXGLCANVAS-CANVAS-ELEMENT-FIX.md  KICAD_WASM_BUILD.md  PTHREADS.md  README.md  THREADING_RESEARCH.md  ccache-benchmark.md  ci-build-slowness-findings.md
docs/debugging/: learning.md
docs/research/: threading_2.md
features/fix-asyncify-O2-and-modal-promise-rejection/: rtree-debug-findings.md
features/lp/: README.md  astro-templates-and-component-libraries.md  brand-guide.md  competitive-analysis-synthesis.md  competitor-landing-pages.md  competitors-ai-automation-parts.md  incumbent-desktop-eda-cloud-marketing.md  landing-page-best-practices.md  marketing-site-playbook.md  pcbjam-landing-page-copy-and-visuals.md
features/schematic/: 0001-eeschema-iface-stubs.md  kicad.patch  root.patch
features/symbol-editor/: 0001-symbol-editor-port.md
features/webgl/: 0002-gal-native-test-architecture.md  0003-webgl-gal-implementation-plan.md
features/yjs-bridge/: 0001-general-bridge-design.md  0002-pl-editor-bridge.md  0003-eeschema-bridge.md  0004-pcbnew-bridge.md  0007-eeschema-essential-ops-findings.md  0007-eeschema-essential-ops-prompt.md
patches/: 0001-wasm-optional-deps.patch
patches/wxwidgets-wasm/: README.md  checksums.sha256  wxwidgets-wasm.patch
scripts/: build-3d-webgl-test.sh  build-core-wasm.sh  build-eh-spike.sh  build-gal-native-test.sh  build-gal-webgl-test.sh  build-kicad-wasm.sh  build-monitor.sh  build-wasm-test.sh  build-wx-wasm.sh  build-wxbase-wasm.sh  build-wxuniversal-wasm.sh  build-wxwidgets-native.sh  build-wxwidgets-wasm-clean.sh  build.sh  compare-screenshots.sh  create-feature-patches.sh  generate-wxwidgets-patches.sh  prepare.sh  setup-emsdk.sh  test-gal-regression.sh  update-baseline-screenshots.sh  update-kicad.sh
scripts/bench/: binaryen-source-bench.sh  o2-config-sweep.sh  sweep.conf
scripts/binaryen-hoist-pass/: build-wasm-opt.sh
scripts/common/: apply-asyncify.sh  apply-finalize.sh  env.sh  functions.sh  get-wasm-opt.sh  hoist-and-asyncify.sh  inject-dyncall-shims.sh  logging.sh  stages.sh  versions.sh
scripts/config/: autom4te-wrapper.sh  config-sub-wrapper.sh
scripts/deploy/: build-demo.mjs  build-editor.mjs  dev-demo.mjs  publish-libs.ts  publish-wasm.mjs  upload-models-r2.sh  wasm-cache-hash.mjs
scripts/git-workflow/: assert-clean.sh  assert-on-branch.sh  for-each-repo.sh  repo-status.sh  repos.sh
scripts/kicad/: audit-merged-symbols.sh  build-eeschema.sh  build-footprint_editor.sh  build-gerbview.sh  build-kicad-target.sh  build-kicad_tools.sh  build-occ_service.sh  build-pcbnew.sh  build-symbol_editor.sh
site/: .env.example  astro.config.mjs  package-lock.json  package.json  vercel.json
site/src/: content.config.ts
stubs/include/: Standard_Version.hxx  git2.h
stubs/src/: disabled_features_stubs.cpp  kicad_git_all_stubs.cpp  kicad_git_stubs.cpp  occ_stubs.cpp  panel_git_repos_stub.cpp
tests/: .gitignore  GL_README.md  README.md  TESTING.md  WHATWORKS.md  global-setup.ts  package-lock.json  package.json  playwright-asyncify.config.ts  playwright-button-finder.config.ts  playwright-coroutine.config.ts  playwright-kicad.config.ts  playwright-web.config.ts  playwright.config.ts  screenshot-manifest.json  tsconfig.json
tests/3d-regression/: README.md
tests/apps/: Makefile.wasm  minimal_test.cpp
tests/asyncify/: asyncify-races.spec.ts
tests/collab/: browser-entry-v2.ts  browser-entry.ts  build.mjs
tests/e2e/: aui-resize.spec.ts  aui.spec.ts  auinotebook.spec.ts  bitmapbuttons.spec.ts  bitmask.spec.ts  boot.spec.ts  calendar.spec.ts  clipboard.spec.ts  collapse-relayout.spec.ts  collapsible.spec.ts  contextmenu.spec.ts  coroutine-nested.spec.ts  coroutine-pthread.spec.ts  coroutine-raytrace.spec.ts  coroutine-threadpool-real.spec.ts  coroutine-wxstring-mt.spec.ts  coroutine.spec.ts  dataview.spec.ts  dataviewvirtual.spec.ts  dialog.spec.ts  dialogs.spec.ts  dnd.spec.ts  dom-port-bugs.spec.ts  earlysize.spec.ts  filedialog-folder-nav.spec.ts  filedialog.spec.ts  fontenum.spec.ts  gal-webgl.spec.ts  grid.spec.ts  gridedit.spec.ts  gridrenderers.spec.ts  htmlwin.spec.ts  infobar.spec.ts  layout.spec.ts  listctrl.spec.ts  logerror.spec.ts  maximize.spec.ts  menu.spec.ts  modal.spec.ts  notebook.spec.ts  (+26 more)
tests/kicad/: 3d-viewer-deadlock.spec.ts  3d-viewer-models.spec.ts  3d-viewer.spec.ts  appearance.spec.ts  calculator.spec.ts  collab-undo.spec.ts  contextmenu-scrollbar-pcbnew.spec.ts  contextmenu-scrollbar.spec.ts  dark-mode.spec.ts  dialog-select-on-open.spec.ts  drift-trio-fuzz.spec.ts  drift-trio.spec.ts  eeschema-collab.spec.ts  eeschema-crosshair.spec.ts  eeschema-load.spec.ts  eeschema-perf.spec.ts  eeschema-subschema.spec.ts  eeschema-ui.spec.ts  eeschema-url-regex.spec.ts  eeschema.spec.ts  fixtures.ts  frame-runtime.spec.ts  gerbview-print.spec.ts  gerbview.spec.ts  import-settings-modal-stack.spec.ts  items-bridge.spec.ts  load-pcb-probe.spec.ts  load-pcb.spec.ts  menu-undo-stale.spec.ts  modal-input-lock.spec.ts  occ-export-models.spec.ts  occ-export.spec.ts  occ-probe.spec.ts  pcbnew-collab.spec.ts  pcbnew-move.spec.ts  pcbnew-perf.spec.ts  pcbnew.spec.ts  pl_editor-collab.spec.ts  pl_editor-load.spec.ts  pl_editor-uuid.spec.ts  (+16 more)
wasm/: README.md
wasm/occ-service/: CMakeLists.txt  occ_service_main.cpp  occ_service_pre.js
wasm/tools/: CMakeLists.txt
web/: .gitignore  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
(+416 files in other folders)
